--- a/main.tex
+++ b/main.tex
@@ -519,10 +519,12 @@ The parameters of this problem is the constraint and conditions of the model. Th
 Apart from the parameters from the problem, different algorithms also have different hyperparameters that can be tuned. The dynamic programming has a hyperparameter-the number of different states $N_3$, which controls the balance between the efficiency and the effectiveness of the algorithm. As the $N_3$ increases, the precision of the result is improved, however, at the cost of the running time since the algorithms has to traverse more states at each time interval. However, while comparing the performance of different algorithms, this hyperparameter is fixed at a value enabling the result approaching the global optimality as much as possible when keeping the model running efficiently. Otherwise, since there are several approaches related to the dynamic programming, the number of different combinations of the algorithms and hyperparameters will increase which is infeasible to generate all the results based on the project progress. \newline\newline
 Another kind of approach called Rolling horizon has two hyperparameters $\mu$ and $\varepsilon$. $\mu$ manipulates the window size (the fixed subproblem size) which stands for how much future information can be used. $\varepsilon$ is the tolerance for the current solution and the model can accept a worsen solution if $\varepsilon$ increases. However, to reduce the running time of the entire comparison, only the hyperparameter $\mu$ is tuned because the problem studied by this project is a time series problem and the instance shows periodic features. Hence, the size of the window $\mu$ has a greater impact on the solution quality which increases the model's ability to find and exploit this pattern.
 \subsubsection{Datasets}
-
+The testing datas  generated from one original large dataset. Though there are gaps in the original dataset, the missing data in question are only for one or multiple periods and their absence does not affect the regularity of the remaining data, even if they are not filled or removed.\newline\newline
+Based on the original dataset,  different size of the dataset has been created to test different algorithms' performance on different size of the data. As a consequent, the best approach for small dataset and large dataset will be discussed. 
 \section{Result}
-
+To compare different algorithms in-depth, several criteria has been chosen to evaluate these algorithms-percentages of global optimal, success rate, running time and memory usage. Furthermore, the performance of thr rolling horizon approach with different hyperparameter $\mu$ will be compared with each other. For each combination of algorithm, hyperparameter and size of the dataset, the algorithm will run twenty times for different data on the same size. When comparing these algorithms, the average of these results will be calculated and used. 
 \subsection{Percentage of Global Solution Found}
+www
 \subsection{Success Rate}
 
 \subsection{Running Time}
@@ -530,6 +532,27 @@ Another kind of approach called Rolling horizon has two hyperparameters $\mu$ an
 \subsection{Memory Usage}
 
 \subsection{Hyperparameter of the Rolling Horizon Approach}
+
+\section{Conclusion and Future Direction}
+\subsection{Conclusion}
+
+\subsection{Future direction}
+There have been many studies on the BESS prediction control problem, while many future work still need to be done. This project only focus on the optimization of the basic BESS problem, the next step can focus in many different directions.\newline\newline
+One direction is to include more advanced algorithms or approaches to solve this problem. In the rule-based heuristic, all the prediction is based on current information or limited previous information, but the prediction can still be improved. For example, Autoregressive Integrated Moving Average (Arima)-a time series analysis and forecasting algorithm-can be applied to utilize many past information and capture the short term and long term trend in the data and its seasonal features. After applying more advanced prediction algorithms like Arima, the prediction and the solution quality can be enhanced. Additionally, since only optimization methods are considered in the project, machine learning algorithms can also be included to solve the problem. Many previous work has been done to apply different machine learning algorithms to the BESS problem, however, few work has been done to compare these algorithms and non-machine learning methods in-depth. \newline\newline
+Another direction is to extend the current model or build a more complex model. The project only focus on the ideal problem, hence some reality factors are not included. The government and some corporations can adjust the tariff structure based on the power supply and demand level. Hence, the tariff structure is dynamically changed and the implemented algorithms need to adapt or even predict it to improve the solution. Furthermore, the batteries have a life span, and the efficiency of charging and discharging and the capacity of batteries will decrease with the increase of use time. Therefore, the future works can take an effort to study on the decay of the battery. In general, there are many practical factors to consider when working on an extension. Additionally, the export part can be added into the model if the tariff structure and the battery is changing dynamically. Since one of the reasons why business companies and individual customers are interested in the BESS is its ability to connect to the grid and export the energy in the battery into the grid to make a profit, thus the export part in the tariff structure and the export behavior can be designed into the algorithms. \newline\newline
+Last but not least, tuning the hyperparameters to find the most general algorithm can be another direction in the future. The project only treat the battery related parameters as fixed parameters, however, after extending the model, different type of batteries and its capacity and the price can be considered. For example, if the capacity of battery is treated as a hyperparameter, the electricity cost decreases since with larger capacity, the model are more flexible to deal with tariff structure. However, the price of battery is increasing and affect the total cost of the solution. Moreover, there are some hyperparameters from different algorithms can also be tuned to improve the efficiency and the effectiveness of the approach. 
+
+\section{Reflections}
+\subsection{Project Management}
+At the beginning of the project, because I have no knowledge of the entire problem and related algorithms, for each algorithms I allocated a long time to them. For the same reason, I decided to have a meeting with Professor Geert every week to communicate the progress of the project and the problem I encountered. \newline\newline
+However, it takes shorter time to understand what the BESS prediction control model is and implement the MILP and dynamic programming including some pruning strategies. Hence, I also have done some studies on the Rolling Horizon Approach and implement a simple version of it ahead of the schedule. \newline\newline
+When entering the second semester, some issues of the Rolling Horizon approach based on Dynamic programming happened. Hence, I turned to another method MILP to be the problem-specific algorithm of the Rolling approach. Additionally, I also read some papers about the rule-based heuristic and implemented it. After communicating with professor, I decided to build a prediction component for the rule-based heuristic to improve the quality of the solution. After the prediction model is built and finished the plan made in in interim report, the Professor suggested me to include a more advanced prediction approach. Hence, I read some materials about the Arima-a time series forecasting method-and attempted to implemented it. Nevertheless, because there's not enough time at the end, A full rule-based heuristic with Arima was not completed. Additionally, when trying to include the Arima model, I also attempted to consider the battery degradation in the algorithms and had implemented in the rule-based heuristic. However, other approaches has not included this part for the same reason of time limitation. \newline\newline
+\subsection{Contribution and Reflection}
+At the end of the project, I have achieved all the goals listed in my revised plan. At the first semester, I implemented some basic methods-MILP and Dynamic Programming-that has been applied to the BESS problem before. At the second semester, I read some papers and applied some novel methods which has not been applied to the BESS problem in previous works. The rolling horizon approach is built with two algorithms-MILP and Dynamic programming. Furthermore, the rule-based heuristic also has extra novelty, the prediction component is added into the heuristic which has improved the result. \newline\newline
+Additionally, I have compared all these approaches in-depth, which is another novelty of my work. I compared their running time, memory usage, the percentage of the global solution and success rate. Such comparison has not been done before. \newline\newline
+\subsubsection{LSEPI} 
+
+
 
 
 \addcontentsline{toc}{section}{References}
